css/style.css
/* ... */
.nav {
    position: relative;
    margin-inline: 10px;
    border-inline: 1px solid #aaaaaa;
    align-content: center;
    padding-inline: 20px;
    height: 100%;
    text-transform: uppercase;
}


.nav::after {
    content: "";
    position: absolute;
    width: 0;
    /* Start with no width */
    left: 50%;
    transform: translateX(-50%);
    bottom: 8px;
    height: 1px;
    background-color: white;
    transition: width 1.5s;
    /* Apply the transition to the width */
}

.nav:hover::after {
    width: 80%;
    /* Expand the width on hover */
}

.cat:hover .cat-form {
    display: block;
}

.nav:hover {
    background-color: rgba(0, 0, 0, 0.158);
}


.cat-form {
    position: absolute;
    top: 50px;
    display: none;
    width: 50vw;
    background-color: var(--primary-trans);
    /* background-color: white; */
    padding: 10px;
    border-radius: 0px 4px 4px 4px;
    text-align: center;
    backdrop-filter: blur(2px);
}

.btn-filter {
    background: #222245;
    font-weight: bold;
    border-radius: 4px;
    padding: 8px 20px;
    cursor: pointer;
}

.btn-filter:hover {
    background: #6262bd !important;
}

.checkbox {
    display: none;
}

.category-label {
    color: black;
    display: inline-block;
    padding: 5px 10px;
    border-radius: 150px;
    margin: 5px 5px;
    text-transform: lowercase;
    background-color: var(--primary);
    cursor: pointer;
    box-shadow: 0 0 2px black;
}

.user-log {
    display: none;
    background-color: hsl(0, 0%, 100%);
    padding: 10px;
    border-radius: 4px;
    position: absolute;
    right: 35px;
    top: 70px;
    width: 200px;
}

.user-log hr {
    width: 100%;
}

.user-log h3 {
    color: black;
    margin: 8px;
    /* border-bottom: 1px solid black; */
    margin: auto;
}

.user-log img {
    display: inline-block;
    border-radius: 50%;
    width: 80px;
    height: 80px;
    margin: auto;
    border-bottom: 2px solid rgb(46, 46, 46);
    box-shadow: 0px 5px 2px rgb(196, 196, 196);
    object-fit: cover;
}

.log {
    /* position: relative;
    top: 73px; */
}

.checkbox:checked~.user-log {
    display: flex;
    flex-direction: column;
    align-items: center;
}



.category-label:hover {
    background-color: rgb(255, 255, 255);
}

.checkbox:checked+.category-label {
    /* box-shadow: 0 0 5px inset black; */
    color: white;
    background-color: #27292E;
}

.login {
    margin: auto;
    display: flex;
    flex-direction: column;
    /* width: 20%; */
    width: clamp(300px, 20%, 600px);
    background-color: #00000018;
    padding: 40px;
    border-radius: 4px;
    box-shadow: 10px 0px 10px white;
    border: 1px solid #9c9c9c9c;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.507);
}

.login-h2 {
    text-align: center;
    margin-bottom: 40px;
}

.input {
    background-color: #0000002d;
    border: 1px solid #8f8f8fe0;
    padding: 10px 10px;
    border-radius: 4px;
    margin: 4px;
    color: #ffffff;
    width: 90%;
    position: absolute;
}

.div-input {
    position: relative;
    margin-bottom: 20px;
    height: 50px;
}

.eye {
    position: absolute;
    right: 20px;
    top: 11px;
    cursor: pointer;
}

.lab-login {
    text-decoration: underline;
    text-underline-offset: 4px;
    margin-bottom: 5px;
}

.btn-button {
    border: 1px solid #aaaaaa;
    padding: 5px 10px;
    border-radius: 2px;
    margin-inline: 2px;
    background-color: #27292e44;
    height: 35px;
    width: 80px;
    margin: auto;
    font-size: medium;
}

.lab-add {
    margin-block: 20px;
    display: block;
}

.add-input {
    width: 100%;
    padding: 15px;
    box-sizing: border-box;
    border-radius: 5px;
    background-color: #0000002d;
    border: 1px solid #8f8f8fe0;
    backdrop-filter: blur(7px);
}

.add-body {
    resize: none;
    height: 200px;
}

input[type=file] {
    color: #222245;
    padding: 8px;
    background-color: #ffffffb0;
    border: 1px solid #222245;
    margin: 15px;
    margin-top: 0;
}

input[type=file]:focus {
    outline: 2px dashed #222245;
    outline-offset: 2px;
}

input[type=file]::file-selector-button {
    margin-right: 8px;
    border: none;
    background: #222245;
    padding: 8px 12px;
    color: #fff;
    cursor: pointer;
}

input[type=file]::file-selector-button:hover {
    background: #4747b8;
}

.add-button {
    float: inline-end;
}

.add-fieldset {
    display: none;
    background-color: rgba(0, 0, 0, 0.6);
    margin: 20px;
    padding: 20px;
    border: 1px solid black;
    border-radius: 7px;
    box-shadow: 0 0 3px rgba(74, 66, 112, 0.849);
    /* width: 90%; */
    clear: both;
}

.add-post-check {
    display: none;
}

.add-post-label {
    margin: 200px 30px 0px 30px;
}

.add-post-check:checked+.add-post-label {
    box-shadow: 0 0 3px white;
}

.add-post-check:checked~.add-fieldset,
.update-post-check:checked~.add-fieldset {
    display: block;
}

.posts {
    margin: 70px 25%;
    transition: margin 1s ease;
}

.post-info {
    margin: 70px 6%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 0px !important;
    padding: 30px 30px;
}

.post-info .post {
    overflow-x: hidden;
    overflow-y: auto;
}

.post-info div {
    width: 100%;
}

.post {
    margin: 25px;
    padding: 30px 30px;
    border-radius: 5px;
    background-color: rgba(17, 17, 19, 0.781);
    transition: background-color 0.5s;
    border: 1px solid rgba(17, 17, 19, 0);
}

.post:hover {
    background-color: rgba(46, 46, 53, 0.425);
    border: 1px solid rgba(17, 17, 19, 0.781);
}

.post-image {
    height: 300px;
    max-width: 100%;
    object-fit: contain;
    position: relative;
    left: 50%;
    transform: translate(-50%);
    border-radius: 4px;
    border: 1px solid rgb(145, 145, 145);
    padding: 6px;
}

.post-cat {
    display: inline-block;
    border: 1px solid #aaaaaa;
    border-radius: 150px;
    background-color: #27292ea9;
    padding: 10px;
    margin: 3px;
}
/* ... */

